# appGynSys

./: .gitignore  CANCELAR_INSTALACION.md  DESPUES_DE_INSTALAR_NODE.md  DOCUMENTACION_COMPLETA.md  ESTADO_ACTUAL.txt  INICIAR_BACKEND.md  INSTALAR_NODEJS.md  INSTRUCCIONES_PRUEBA.md  NODEJS_INSTALACION_ALTERNATIVA.md  QUICK_START.md  README.md  SOLUCION_CORS_ERROR500.md  SOLUCION_NPM.md  SOLUCION_SCRIPT_NODE.md  [project].txt  add_oauth_whitelist.sh  backup.sql  browser-extension.crx  browser-extension.pem  check_api_query.py  check_api_query_debug.py  check_api_query_fixed.py  check_doctor_slug.py  check_lourdes.py  check_lourdes_full.py  check_push.sh  check_push_users.sh  check_roles.py  check_users.py  create_oauth_whitelist.sql  debug_alicia_data.py  debug_profile_error.py  deploy.sh  diagnose_netlify.js  docker-compose.yml  fix_vapid_env.sh  generate_pwa_icons.py  generate_vapid.py  main.py  migrate_to_render.ps1  (+10 more)
backend/: .dockerignore  .gitignore  ACTUALIZAR_DRA_MARIEL.md  APLICAR_MIGRACION.bat  BIografia_DRA_MARIEL.md  CERRAR_SERVIDOR.md  COMO_SUBIR_FOTOS.md  CREAR_BASE_DATOS.md  CREAR_MIGRACION_PHOTO.md  CREAR_MIGRACION_TESTIMONIALS_GALLERY.md  DATOS_DRA_MARIEL.md  Dockerfile  INSTALAR_DEPENDENCIAS.md  INVESTIGACION_ADMIN.md  PLANTILLA_README.md  README.md  RESUMEN_TESTIMONIALS_GALLERY.md  SOLUCION_BCRYPT.md  SOLUCION_UVICORN.md  SOLUCION_UVICORN_IMPORT.md  SUBIR_IMAGENES_GALERIA.md  add_recommendations_module.py  alembic.ini  analyze_tenant_modules.py  apply_mariel_template.py  apply_migration.py  apply_seo_migration.py  async_auth_plan.py  audit_dast.txt  (+111 more)
(+677 files in other folders)
